# eph-memory-workspace

./: .gitignore  .gitmodules
bpf/: Makefile  kvm_pf_trace.bpf.c  kvm_pf_trace.c  kvm_pf_trace.h  pf_trace.bpf.c  pf_trace.c  pf_trace.h
runner/: Cargo.toml
runner/src/: balloon_exp.rs  eph_exp.rs  main.rs  setup_vms.rs
scripts/: extract_shrink.py  helpers.py  pf_trace_cdf.py  pf_trace_time.py  plot_tlb_miss_time.py  process_pf_trace.py  split_perf_script.py
spark_tpcds/: README.md  build_spark_tpc-ds.sh  build_vm_linux.sh  copy_spark_tpcds_onto_vm.sh  inside_vm.sh
ubmks/: Makefile  alloc_data.c  alloc_data_mfs.c  alloc_data_numa.c  multi_alloc.c
vms/: balloon_vm.xml  cloud-net.yaml  cloud.yaml  hotplug_vm.xml  hotunplug.xml
workloads/: .gitignore
workloads/tpcds/: README
workloads/tpcds/ddl/: create_database.sql  create_tables.sql
workloads/tpcds/queries/: all.sql
