[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
libscail = { path = "../libscail" }
runner-proc-macro = { path = "../libscail/runner-proc-macro" }
spurs = "0.9.2"
spurs-util = "0.3.1"
clap = { version = "4.5.52", features = ["color"] }
env_logger = "0.11.8"
console = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"